@@ -1,0 +1,7 @@
+## utils/devnag/ac/withenable.ac: configure.ac fragment for the TeX Live subdirectory utils/devnag/
+dnl
+dnl Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
+dnl You may freely use, modify and/or distribute this file.
+dnl
+## configure options and TL libraries required for devnag
+KPSE_ENABLE_PROG([devnag])
